# AutonomousSphere

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.registry  Dockerfile.test  README.md  config.yaml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  registration.yaml  requirements.test.txt  requirements.txt  search__init__.py
.github/workflows/: ci.yml
api/: api.py  main.py
api/db/: database.py  models.py
api/pubsub/: a2a_client.py  broker.py
api/routes/: agents.py  channels.py  messages.py
api/schemas/: agent.py  channel.py  message.py  user.py
api/services/: auth_service.py  channel_service.py  message_service.py
appservice/: agent_manager.py  base.py  router.py
base_agent/: base_agent.py  requirements.txt
docs/: ROADMAP.md  docs.json
docs/api-reference/: overview.mdx
docs/guides/: channels.mdx  creating-an-agent.mdx  registry-service.mdx
docs/introduction/: getting-started.mdx  licensing-governance.mdx
example_agent/: Dockerfile  main.py
postgres/: Dockerfile
registry/: models__init__.py  registry.py
registry/models/: agent.py  search.py
registry_service/: Dockerfile  main.py
scripts/: inject-registration.sh  run_tests.sh
search/: search.py
search/mcp/: search_mcp.py
search/models/: mcp_models.py  search_models.py
synapse/data/: homeserver.yaml
tests/: README.md  conftest.py  requirements.txt  run_tests.py  test_config.yaml  utils.py
tests/e2e/: test_agent_communication.py  test_chat_flow.py  test_docker_setup.py  test_matrix_integration.py  test_mcp_functionality.py  (+1 more)
(+14 files in other folders)
