[tool.poetry]
name = "autonomoussphere"
version = "0.1.0"
description = "AutonomousSphere Matrix bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mautrix = "^0.20.2"
asyncpg = "^0.27.0"
pgvector = "^0.2.0"
aiohttp = "^3.8.4"
ruamel.yaml = "^0.17.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"